# local-event-notifier

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  integration.json  integration.py  main.py  makefile  pyproject.toml  test.py  text
app/: config.py
app/api/: openapi.py  routes.py
app/api/endpoints/: events.py
app/models/: events.py
app/repositories/: events.py
app/services/: events.py  telex_service.py
app/tests/api/endpoints/: test_events.py
